kubernetes/np-egress-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: demo-egress
spec:
  podSelector: {}
  policyTypes:
    - Egress
