kubernetes/np-ingress-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: demo-egress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
